--- a/src/components/layout/footer/Footer.css
+++ b/src/components/layout/footer/Footer.css
@@ -1,8 +1,8 @@
 .footer {
-  position: absolute;
+  /* position: absolute;
   bottom: 0;
   left: 0;
-  width: 100%;
+  width: 100%; */
   display: flex;
   flex-direction: column;
   justify-content: center;
