--- a/src/components/app/App.css
+++ b/src/components/app/App.css
@@ -1,3 +1,7 @@
+.html {
+  padding: 0;
+  margin: 0;
+}
 .App {
   text-align: center;
   /* background-image: linear-gradient(
@@ -21,23 +25,4 @@
     rgba(0, 255, 176, 1) 0%,
     rgba(66, 105, 242, 1) 90%
   );
-}
-
-.App-logo {
-  height: 40vmin;
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #09d3ac;
 }
