changed css for card list added grid and background

--- a/src/components/content/weather/cardlist/CardList.css
+++ b/src/components/content/weather/cardlist/CardList.css
@@ -1,3 +1,17 @@
 .card-list {
-  display: flex;
+  background: rgba(0, 0, 0, 0.5);
+}
+
+.card-list-title {
+  font-family: "Raleway", sans-serif;
+}
+
+.card-list-grid {
+  display: grid;
+  /* grid-column-gap: 10px; */
+  /* grid-row-gap: 15px; */
+  /* justify-content: space-around; */
+
+  align-items: end;
+  grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
 }
