--- a/src/components/content/weather/Weather.css
+++ b/src/components/content/weather/Weather.css
@@ -3,24 +3,32 @@
   justify-content: center;
   width: 100%;
   height: 100%;
-  padding: 3em;
+  padding-top: 3em;
   padding-bottom: 10em;
 }
-
 .weather-panel {
   padding: 3em;
   border: 3px solid black;
   width: 80%;
   background: #2196f3;
+  background-image: radial-gradient(
+    circle farthest-corner at 10% 20%,
+    rgba(0, 255, 176, 1) 0%,
+    rgba(66, 105, 242, 1) 90%
+  );
+  background: linear-gradient(90deg, #fc466b 0%, #3f5efb 100%);
 }
 
 .weather-title {
   font-family: "Raleway";
+  background: red;
+  margin: 0;
 }
 
-@media (max-width: 1200px) {
+@media (max-width: 1000px) {
   .weather-panel {
     width: 100%;
+    height: 100%;
   }
 }
 
