--- a/src/components/app/App.css
+++ b/src/components/app/App.css
@@ -25,4 +25,10 @@
     rgba(0, 255, 176, 1) 0%,
     rgba(66, 105, 242, 1) 90%
   );
+  background-image: linear-gradient(
+    70.6deg,
+    rgba(172, 30, 255, 1) 0.3%,
+    rgba(65, 35, 251, 1) 55.8%,
+    rgba(35, 251, 224, 1) 105.1%
+  );
 }
