--- a/src/components/content/weather/Weather.css
+++ b/src/components/content/weather/Weather.css
@@ -39,7 +39,7 @@
 }
 
 .weather-title {
-  font-family: "Russo One";
+  font-family: "Roboto", sans-serif;
   color: white;
   height: 100%;
   padding: 1em;
