--- a/src/components/content/weather/CityWeather/CityWeather.css
+++ b/src/components/content/weather/CityWeather/CityWeather.css
@@ -5,7 +5,7 @@
   align-items: center;
   flex-direction: column;
   justify-content: flex-start;
-  padding-top: 2em;
+  padding: 2em;
 }
 .city-weather-title {
   font-family: "Raleway";
