--- a/src/components/content/weather/Weather.css
+++ b/src/components/content/weather/Weather.css
@@ -1,13 +1,17 @@
-.weather {
+/* .weather {
   display: flex;
   justify-content: center;
   width: 100%;
   height: 100%;
   padding-top: 3em;
   padding-bottom: 10em;
-}
+} */
 
 .header {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-content: center;
   background: rgba(66, 105, 242, 1);
   background: rgba(23, 96, 204, 0.7);
   background-image: radial-gradient(
@@ -19,10 +23,18 @@
   padding: 1em;
 }
 
+.weather-description {
+  font-size: 1.2em;
+  color: white;
+}
+
 .weather-panel {
   /* padding: 3em; */
+  display: flex;
+  justify-content: center;
+  width: 100%;
+  /* padding-bottom: 8em; */
   border: 3px solid black;
-  width: 70%;
   background: #2196f3;
   background-image: radial-gradient(
     circle farthest-corner at 10% 20%,
@@ -39,7 +51,7 @@
 }
 
 .weather-title {
-  font-family: "Roboto", sans-serif;
+  font-family: "Lobster", sans-serif;
   color: white;
   height: 100%;
   padding: 1em;
