--- a/src/components/content/favorites/Favorites.css
+++ b/src/components/content/favorites/Favorites.css
@@ -1,20 +1,48 @@
+.main-container {
+  background: linear-gradient(90deg, #fc466b 0%, #3f5efb 100%);
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+}
+
 .favorites {
   display: flex;
   justify-content: center;
+  align-items: center;
   width: 100%;
-  height: 100%;
   padding: 3em;
-  padding-bottom: 10em;
+  width: 80%;
+}
+.favorites-title {
+  font-family: "Raleway", sans-serif;
+  text-decoration: underline;
+}
+
+.favorites-description {
+  font-family: "Raleway", sans-serif;
+  font-size: 1.5em;
 }
 
 .favorites-panel {
   padding: 3em;
   border: 3px solid black;
   width: 80%;
+  height: 80vh;
   color: white;
   background: #2196f3;
+  background: rgba(37, 87, 161, 0.5);
 }
 
-.favorites-title {
-  font-family: "Raleway";
+@media (max-width: 600px) {
+  .favorites {
+    width: 100%;
+    height: 85vh;
+    padding: 0;
+    /* height: 90vh; */
+  }
+  .favorites-panel {
+    border: none;
+    width: 100%;
+    height: 100%;
+  }
 }
