--- a/src/components/content/settings/Settings.css
+++ b/src/components/content/settings/Settings.css
@@ -1,20 +1,59 @@
+.main-container {
+  /* background: linear-gradient(90deg, #fc466b 0%, #3f5efb 100%); */
+
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+}
+
 .settings {
   display: flex;
   justify-content: center;
-  width: 100%;
-  height: 100%;
+  align-items: center;
   padding: 3em;
-  padding-bottom: 10em;
+  width: 80%;
+}
+.settings-title {
+  font-family: "Raleway", sans-serif;
+  text-decoration: underline;
+}
+
+.settings-description {
+  font-family: "Raleway", sans-serif;
+  font-size: 1.5em;
+}
+
+.setting-list {
+  width: 50vh;
 }
 
 .settings-panel {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
   padding: 3em;
   border: 3px solid black;
   width: 80%;
+  height: 80vh;
   color: white;
-  background: #2196f3;
+  background-image: linear-gradient(
+    178.1deg,
+    rgba(60, 55, 106, 1) 8.5%,
+    rgba(23, 20, 69, 1) 82.4%
+  );
 }
 
-.settings-title {
-  font-family: "Raleway";
+@media (max-width: 600px) {
+  .settings {
+    width: 100%;
+    height: 85vh;
+    padding: 0;
+    /* height: 90vh; */
+  }
+  .settings-panel {
+    border: none;
+    width: 100%;
+    height: 100%;
+  }
 }
