--- a/src/components/content/settings/Settings.css
+++ b/src/components/content/settings/Settings.css
@@ -1,6 +1,4 @@
 .main-container {
-  /* background: linear-gradient(90deg, #fc466b 0%, #3f5efb 100%); */
-
   display: flex;
   justify-content: center;
   align-items: flex-start;
@@ -12,6 +10,23 @@
   align-items: center;
   padding: 3em;
   width: 80%;
+}
+.settings-panel {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+  padding: 3em;
+  border: 3px solid black;
+  width: 80%;
+  min-height: 80vh;
+  color: white;
+  background-image: linear-gradient(
+    178.1deg,
+    rgba(60, 55, 106, 1) 8.5%,
+    rgba(23, 20, 69, 1) 82.4%
+  );
+  background: rgba(3, 18, 39, 0.5);
 }
 
 .settings-header {
@@ -36,32 +51,14 @@
   width: 50vh;
 }
 
-.settings-panel {
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-start;
-  align-items: center;
-  padding: 3em;
-  border: 3px solid black;
-  width: 80%;
-  height: 80vh;
-  color: white;
-  background-image: linear-gradient(
-    178.1deg,
-    rgba(60, 55, 106, 1) 8.5%,
-    rgba(23, 20, 69, 1) 82.4%
-  );
-  background: rgba(3, 18, 39, 0.5);
-}
-
 @media (max-width: 600px) {
   .settings {
     width: 100%;
-    height: 85vh;
+    font-size: 0.8em;
     padding: 0;
-    /* height: 90vh; */
   }
   .settings-panel {
+    min-height: 85vh;
     border: none;
     width: 100%;
     height: 100%;
