--- a/src/components/content/weather/cardlist/card/Card.css
+++ b/src/components/content/weather/cardlist/card/Card.css
@@ -1,5 +1,7 @@
 .card {
   display: flex;
+  flex-direction: column;
+  align-items: center;
   font-family: "Roboto", sans-serif;
 }
 @media (max-width: 600px) {
