--- a/src/components/content/weather/searcbox/SearchBox.css
+++ b/src/components/content/weather/searcbox/SearchBox.css
@@ -3,3 +3,17 @@
   align-items: center;
   justify-content: center;
 }
+
+.searchbox input {
+  padding: 0.5em;
+}
+
+@media (max-width: 400px) {
+  .searchbox {
+    flex-direction: column;
+  }
+  .searchbox input {
+    width: 80%;
+    margin-bottom: 1em;
+  }
+}
