--- a/src/components/app/App.css
+++ b/src/components/app/App.css
@@ -12,7 +12,7 @@
 }
 
 .footer {
-  min-height: 5vh;
+  min-height: 6vh;
   margin: 0;
   padding: 0;
 }
@@ -29,9 +29,6 @@
 
 @media (max-width: 600px) {
   .main-container {
-    min-height: 80vh;
-  }
-  .footer {
-    min-height: 10vh;
+    font-size: 0.8em;
   }
 }
