--- a/src/components/content/weather/searcbox/SearchBox.css
+++ b/src/components/content/weather/searcbox/SearchBox.css
@@ -5,6 +5,17 @@
 }
 
 .searchbox input {
-  padding: 0.5em;
   width: 50%;
+  color: white;
+}
+
+.searchbox .submit {
+  background: linear-gradient(45deg, #2196f3 30%, #21cbf3 90%);
+  border: 0;
+  border-radius: 3;
+  box-shadow: 0 3px 5px 2px rgba(33, 203, 243, 0.3);
+  color: white;
+  font-weight: bold;
+  padding: 0.8em;
+  margin: 5;
 }
