--- a/src/components/content/weather/cardlist/CardList.css
+++ b/src/components/content/weather/cardlist/CardList.css
@@ -9,10 +9,6 @@
 
 .card-list-grid {
   display: grid;
-  /* grid-column-gap: 10px; */
-  /* grid-row-gap: 15px; */
-  /* justify-content: space-around; */
-
-  align-items: end;
-  grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
+  grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+  grid-gap: 20px;
 }
