--- a/src/components/content/weather/cardlist/card/Card.css
+++ b/src/components/content/weather/cardlist/card/Card.css
@@ -2,7 +2,7 @@
   background: linear-gradient(45deg, #2196f3 30%, #21cbf3 90%);
   display: flex;
   flex-direction: column;
-  align-items: flex-start;
+  align-items: center;
   justify-content: center;
   font-family: "Roboto", sans-serif;
 }
