--- a/src/components/content/weather/cardlist/CardList.css
+++ b/src/components/content/weather/cardlist/CardList.css
@@ -9,6 +9,7 @@
 
 .card-list-grid {
   display: grid;
+  background: red;
   grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
   grid-gap: 20px;
 }
