--- a/src/components/content/weather/Weather.css
+++ b/src/components/content/weather/Weather.css
@@ -20,7 +20,7 @@
   display: flex;
   justify-content: center;
   width: 100%;
-  height: 100%;
+  min-height: 90vh;
   border: 3px solid black;
   background: linear-gradient(90deg, #fc466b 0%, #3f5efb 100%);
 }
